--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
     compileSdk 33
 
     defaultConfig {
-        applicationId "com.example.networkot"
+        applicationId "ci.miage.mob.networkot"
         minSdk 21
         targetSdk 33
         versionCode 1
